# esp8266-captive-portal

./: .gitignore  CONTRIBUTORS  README.md  cspell.config.yaml  justfile  noxfile.py  pyproject.toml
docs/: wordlist.txt
src/captive-portal/: __init__.py  boot.py  captive_dns.py  captive_http.py  captive_portal.py  credentials.py  index.html  main.py  server.py
