[project]
name = "esp8266-captive-portal"
version = "0.1.0"
description = "ESP8266 captive portal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
stubs = [
    "micropython-esp8266-stubs>=1.27.0.post1",
]

[dependency-groups]
dev = [
    "esptool>=5.2.0",
    "micropython-esp8266-stubs>=1.27.0.post1",
    "mpremote>=1.27.0",
    "nox>=2026.2.9",
    "nox-uv>=0.7.1",
]

# https://micropython-stubs.readthedocs.io/en/main/pyproject.html#pyproject-config

# ###################################################################
# pyright and pylance options:
# ###################################################################

[tool.pyright]
include = ["src"]
ignore = ["**/typings"]
# exclude = [".*", "__*", "**/typings"]

typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "Linux"
pythonVersion = "3.10"

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "information"

# ###################################################################
# # mypy global options:
# ###################################################################
[tool.mypy]
platform = "linux"
python_version = "3.10"

mypy_path = "typings"
custom_typeshed_dir = "typings"
files = "*.py"
exclude = [
    "typings[\\/].*", # TOML basic string 
]

follow_imports = "silent"
follow_imports_for_stubs = true
no_site_packages = true
check_untyped_defs = true